# helpdesk-ai

./: .env.example  .gitignore  CLAUDE.md  LEARNINGS.md  Makefile  README.md  docker-compose.swarm.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_seed_prompts.py  0003_role_overrides.py  0004_seed_ticket_draft_prompt.py  0005_triage_prompt_v2.py  0006_csat_token.py  0007_csat_responded_at_nullable.py  0008_assets.py  0009_departments_applications.py  0010_ticket_type_sla.py  0011_user_profiles.py
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: admin.py  assets.py  attachments.py  auth.py  chat.py  csat.py  health.py  tickets.py
backend/app/core/: config.py  errors.py  security.py
backend/app/db/: session.py
backend/app/schemas/: assets.py  auth.py  chat.py  kb.py  tickets.py
backend/app/services/ai/: guardrails.py  orchestrator.py  redactor.py  token_map.py
backend/app/services/attachments/: scanner.py  storage.py
backend/app/services/auth/: auth_service.py  role_resolver.py
backend/app/services/notifications/: email.py  hooks.py  outbox.py
backend/app/services/rag/: chunker.py  embedder.py  ingester.py  retriever.py
backend/app/workers/: kb_worker.py
backend/scripts/: patch_kb_prompts.py  seed_kb_v2.py
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  test_assets.py  test_chat.py  test_kb.py  test_login.py  test_roles.py
backend/tests/prompt_injection/: conftest.py  test_pi_00_smoke.py
backend/tests/unit/: test_attachments_scanner.py  test_attachments_storage.py  test_guardrails.py  test_health.py  test_orchestrator.py  test_redactor.py  test_token_map.py
docs/: ARCHITECTURE.md  DATABASE_SCHEMA.sql  PROMPTS.md  RAG_KNOWLEDGE_BASE.md  README.md  SECURITY.md  SPEC.md  bootstrap.md
frontend/: Dockerfile  eslint.config.mjs  next.config.ts  package.json  tsconfig.tsbuildinfo  vitest.config.ts
scripts/: dev_security_stub.sql  seed_assets.py  (+2 more)
(+42 files in other folders)
