[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "helpdesk-ai-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pydantic[email]",
    "argon2-cffi>=23.1",
    "python-jose[cryptography]>=3.3",
    "structlog>=24.1",
    "python-multipart>=0.0.9",
    "redis>=5.0",
    "minio>=7.2",
    "aiofiles>=23.2",
    "openai>=1.40",
    "anthropic>=0.30",
    "cryptography>=42.0",
    "aiosmtplib>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "anyio>=4.4",
    "ruff>=0.5",
    "mypy>=1.11",
    "types-python-jose",
    "psycopg2-binary>=2.9",  # sync driver for Alembic migrations
    "respx>=0.21",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S", "ANN"]
ignore = ["ANN401"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "ANN"]
# B008: Depends() in default args is the idiomatic FastAPI DI pattern — not a bug.
"app/api/**/*.py" = ["B008"]
# Migration files contain long SQL strings and generated boilerplate — skip most rules.
"alembic/versions/*.py" = ["E501", "I001", "S", "ANN"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
files = ["app/services", "app/core"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "module"
testpaths = ["tests"]
markers = [
    "prompt_injection: prompt injection test suite (run in CI)",
    "integration: requires a live database",
]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["app"]
omit = ["app/main.py", "alembic/*"]

[tool.coverage.report]
fail_under = 70
